--- a/src/components/aq-homepage.html
+++ b/src/components/aq-homepage.html
@@ -137,18 +137,16 @@
         background-color:#ecf6e3;--#f6fcfa;
         height:100%;
         min-height: 640px;
-       
       }
 
       #backtestDiv {
-        margin-top:20px;
-        margin-bottom:20px;
+        margin-bottom:10px;
         margin-left: 20px;
         max-height: 200px;
       }
 
       #analysisDiv {
-        margin-bottom: 50px;
+        margin-bottom: 20px;
       }
 
       .specialFlex {
@@ -164,10 +162,11 @@
       }
 
       #communityDiv{
-        height: 190px;
-        width:400px;
-        background: url(../../resources/images/Ideas/shareideas.jpg);
-        background-size: cover;
+        margin-top:20px;
+        --height: 190px;
+        --width:400px;
+        --background: url(../../resources/images/Ideas/shareideas.jpg);
+        --background-size: cover;
       }
       
       .smallIcon {
